make new index the main one

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "cosmic": "./testindex.js"
+    "cosmic": "./index.js"
   },
   "dependencies": {
     "colors": "^1.1.2",
