--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "configstore": "^3.1.1",
     "cosmicjs": "^3.1.1",
     "inquirer": "^3.1.0",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "upath": "^1.0.4"
   },
   "devDependencies": {
     "eslint": "^4.18.1",
