--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cosmic-cli",
   "version": "1.0.0",
-  "description": "",
+  "description": "The official command line tool for Cosmic JS. Use it to log in to your Cosmic JS account, manage your Buckets and manage data, files and users withing your Buckets.",
   "main": "index.js",
   "bin": {
     "cosmic": "./index.js"
@@ -20,9 +20,23 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0"
   },
+  "keywords": [
+    "cms",
+    "node",
+    "content",
+    "api"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cosmicjs/cosmic-cli.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Tony Spiro <tspiro@tonyspiro.com> (http://tonyspiro.com/)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cosmicjs/cosmic-cli/issues"
+  },
+  "homepage": "https://github.com/cosmicjs/cosmic-cli#readme"
 }
