--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cosmic": "./index.js"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "configstore": "^3.1.1",
