--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "configstore": "^3.1.1",
     "cosmicjs": "^3.1.3",
     "inquirer": "^3.1.0",
+    "opn": "^5.3.0",
     "request": "^2.81.0",
     "upath": "^1.0.4"
   },
