--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "opn": "^5.3.0",
     "request": "^2.81.0",
     "striptags": "^3.1.1",
-    "upath": "^1.0.4"
+    "upath": "^1.0.4",
+    "cryptiles": ">=4.1.2"
   },
   "devDependencies": {
     "eslint": "^4.18.1",
