--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "commander": "^2.9.0",
     "configstore": "^3.1.1",
     "cosmicjs": "^3.1.3",
+    "cross-env": "^5.2.0",
+    "cryptiles": ">=4.1.2",
     "inquirer": "^3.1.0",
     "opn": "^5.3.0",
     "request": "^2.81.0",
     "striptags": "^3.1.1",
-    "upath": "^1.0.4",
-    "cryptiles": ">=4.1.2"
+    "upath": "^1.0.4"
   },
   "devDependencies": {
     "eslint": "^4.18.1",
