--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "commander": "^2.9.0",
     "configstore": "^3.1.1",
     "cosmicjs": "^3.1.3",
+    "cross-env": "^7.0.2",
     "cryptiles": ">=4.1.2",
     "inquirer": "^6.2.2",
     "opn": "^5.3.0",
