--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cosmic-cli",
   "version": "1.3.10",
-  "description": "The official command line tool for Cosmic JS. Use it to log in to your Cosmic JS account, manage your Buckets and manage data, files and users withing your Buckets.",
+  "description": "The official command line tool for Cosmic. Use it to log in to your Cosmic JS account, manage your Buckets and manage data, files and users withing your Buckets.",
   "main": "index.js",
   "bin": {
     "cosmic": "./index.js"
